Minor fix for autocomplete being invisible

--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -766,7 +766,6 @@ details[open] > summary::before {
     min-height: calc(50% - 2px);
     height: calc(50% - 2px);
     max-height: calc(50% - 2px);
-    overflow: hidden;
 }
 
 .site #assembly.hidden {
